# hexapod_pkg

./:  SUMMARY.txt  CMakeLists.txt  README.md
arduino/: Hexapod2.ino
config/: gz_bridge.yaml
description_hexapod/: gps_hexapod.xacro  hexapod_robot.urdf.xacro  lidar_hexapod.xacro
hexapod_pkg/: config_topics_and_parameters.py
hexapod_pkg/auto_balance_nodes/: README.txt  balance_controller.py
hexapod_pkg/camera_nodes/: README.txt  web_camera_node.py
hexapod_pkg/dds_nodes/: README.txt  dds_cmd_talker.py  dds_sensors_fast_listener.py  dds_sensors_reliable_listener.py
hexapod_pkg/gazebo_nodes/: README.txt  gz_hexapod_low_level_control.py  gz_ir_emulator.py  test_pose_robot.py
hexapod_pkg/image_recognition_nodes/: README.txt  ball_viewer_yolo_follower.py  ball_viewer_yolo_swarm.py  clasic_vision_calibratiom.py  cube_viewer_classic_vision.py  cube_viewer_yolo.py
hexapod_pkg/localization_and_orientation_nodes/: README.txt  compute_estimate_xy.py  compute_gps_to_local_xy.py  compute_heading.py
hexapod_pkg/master_nodes/: README.txt  master_monitor.py
hexapod_pkg/navigation_nodes/: README.txt  follower_navigation_node.py  swarm_navigation_with_obstacle_avoidance.py  target_navigation_with_obstacle_avoidance.py
hexapod_pkg/read_sensors_nodes/: README.txt  command_listener_node.py  phone_read_gps.py  phone_read_heading.py  phone_read_imu.py  phone_read_magnetometer.py  read_BerryImu_node.py  read_gps_node.py  read_ir_node.py  read_ultrasonic_node.py
hexapod_pkg/read_sensors_nodes/utils/BerryIMU/: IMU.py  testIMU.py
hexapod_pkg/sensors_interfaces_nodes/: README.txt  compute_ultrasonic_ranges.py
hexapod_pkg/social_robot_nodes/: README.txt  hand_gesture_node.py
hexapod_pkg/teleop_nodes/: README.txt  teleop_hexapod_real.py  teleop_hexapod_sim.py
launch/: README.txt  dds_comunication.launch.py  follower_real.launch.py  navigation_to_target_real.launch.py  sensors_compute_real.launch.py  social_robot_real.launch.py  swarm_follower_real.launch.py
launch_pi/: README.txt  read_sensors_rasberrypi.launch.py  read_sensors_raspberrypi.launch.py
launch_sim/: README.txt  follower_sim.launch.py  gazebo_hexapod_sim.launch.py  navigation_to_target_sim.launch.py  rsp.launch.py  sensors_compute_sim.launch.py  social_robot_sim.launch.py  swarm_follower_sim.launch.py
models/: README.txt
worlds/: README.txt  ball_tracker_world.world  empty.world  navigation_with_box_world.world  swarm_space.world
